data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2068.wast
;; 9. **Test Description:** Construct a `block` encompassing a `loop` where `br_table` is used incorrectly, leading to an improper branch decision.     - **Constraint Checked:** Ensures correct implementation of `br_table` within the block structure.     - **Infinite Loop Relation:** Incorrect branch decisions may cause continuous iterations of the loop without termination.

(assert_invalid
  (module (func $invalid_br_table
    (block (result i32)
      (loop 
        (br_table 1 2 (i32.const 3))
      )
    )
  ))
  "type mismatch"
)